exports[`Options > indent=0 1`] = `
{"deep":{"a":{"b":"c"},"d":false},"name":"fixture","scripts":{"abc":"def"}}
`;

exports[`Options > indent=4 1`] = `
{
    "deep": {
        "a": {
            "b": "c"
        },
        "d": false
    },
    "name": "fixture",
    "scripts": {
        "abc": "def"
    }
}
`;

exports[`Options > keys=(all) 1`] = `
{}
`;

exports[`Options > keys=deep.a 1`] = `
{
	"deep": {
		"d": false
	},
	"name": "fixture",
	"scripts": {
		"abc": "def"
	}
}
`;

exports[`Options > keys=name 1`] = `
{
	"deep": {
		"a": {
			"b": "c"
		},
		"d": false
	},
	"scripts": {
		"abc": "def"
	}
}
`;

exports[`Options > sort=false 1`] = `
{
	"deep": {
		"a": {
			"b": "c"
		},
		"d": false
	},
	"scripts": {
		"abc": "def"
	},
	"name": "fixture"
}
`;

exports[`Options > sort=true 1`] = `
{
	"deep": {
		"a": {
			"b": "c"
		},
		"d": false
	},
	"name": "fixture",
	"scripts": {
		"abc": "def"
	}
}
`;

exports[`Passing directory > String 1`] = `
{
	"deep": {
		"a": {
			"b": "c"
		},
		"d": false
	},
	"name": "fixture",
	"scripts": {
		"abc": "def"
	}
}
`;

exports[`Passing directory > URL 1`] = `
{
	"deep": {
		"a": {
			"b": "c"
		},
		"d": false
	},
	"name": "fixture",
	"scripts": {
		"abc": "def"
	}
}
`;

exports[`Passing path to file > package.json exists 1`] = `
{
	"deep": {
		"a": {
			"b": "c"
		},
		"d": false
	},
	"name": "fixture",
	"scripts": {
		"abc": "def"
	}
}
`;
